[package]
name = "json-response"
version = "1.0.0"
description = "A utility library to send JSON response."
homepage = "https://github.com/routerify/json-response"
repository = "https://github.com/routerify/json-response"
keywords = ["routerify", "hyper-rs", "json", "response"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
routerify = "1.0"
hyper = "0.13"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
stream-body = "0.1"