[package]
name = "routerify-json-response"
version = "1.0.1"
description = "A Routerify utility library to generate JSON response."
homepage = "https://github.com/routerify/routerify-json-response"
repository = "https://github.com/routerify/routerify-json-response"
keywords = ["routerify", "hyper-rs", "json", "response"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hyper = "0.13"
routerify = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
stream-body = "0.1"