[package]
name = "routerify-json-response"
version = "2.0.0"
description = "A Routerify utility library to generate JSON response."
homepage = "https://github.com/routerify/routerify-json-response"
repository = "https://github.com/routerify/routerify-json-response"
keywords = ["routerify", "hyper-rs", "json", "response"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
http-body = "0.4"
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
routerify = "3"